--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,7 +1,6 @@
 <!-- Portfolio Modals -->
 {% for post in site.posts %}
-<div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog"
-  aria-hidden="true">
+<div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
     <div class="close-modal" data-dismiss="modal">
       <div class="lr">
@@ -19,6 +18,8 @@
             {% if post.description %}
             <p>{{ post.description }}</p>
             {% endif %}
+            <!-- Insert the post content below the description -->
+            {{ post.content | markdownify }}
             <ul class="list-inline item-details">
               {% if post.client %}
               <li>Client:
@@ -36,8 +37,7 @@
               </li>
               {% endif %}
             </ul>
-            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
-              Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
           </div>
         </div>
       </div>
