--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,17 +9,14 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p>Thymeless Treats Bakery is a home-based bakery nestled in the heart of North Ridgeville. Our passion is to create timeless and delicious treats that remind you of home.</p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+        <p>Using only the finest ingredients, each pastry is handcrafted with love and care, ensuring a taste that's unparalleled. From classic pastries to contemporary confections, there's something for everyone at Thymeless Treats Bakery.</p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
-          <i class="fa fa-download"></i> Download Theme
+        <a href="#contact" class="btn btn-lg btn-outline">
+          <i class="fa fa-envelope"></i> Contact Us
         </a>
       </div>
     </div>
