--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,9 +3,9 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <img class="img-responsive" src="img/profile.jpg" alt="profile-pic" width="256" height="256" />
+        <img class="img-responsive" src="img/profile2.jpg" alt="profile-pic" width="256" height="256" />
         <div class="intro-text">
-          <span class="name">{{ site.title }}</span>
+          <span class="name" style="font-size: 52px;">{{ site.title }}</span>
           <hr class="star-light" />
           <span class="skills">{{ site.skills }}</span>
         </div>
