--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,9 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#page-top" style="margin: 0; padding: 0;">
-        <img class="img-responsive" src="img/profile2.jpg" alt="profile-pic" style="margin: auto; margin-top: -25px;" width="80" height="80" />
-      </a>    
+      <a class="navbar-brand" href="#page-top">{{ site.title }}</a>  
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
