--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -1,4 +1,4 @@
-<!-- Portfolio Modals -->
+<!-- 
 {% for post in site.posts %}
 <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-content">
@@ -18,7 +18,7 @@
             {% if post.description %}
             <p>{{ post.description }}</p>
             {% endif %}
-            <!-- Insert the post content below the description -->
+
             {{ post.content | markdownify }}
             <ul class="list-inline item-details">
               {% if post.client %}
@@ -38,6 +38,47 @@
               {% endif %}
             </ul>
             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
+-->
+
+
+{% for post in site.posts %}
+<div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="img/portfolio/{{ post.img }}" class="img-responsive centered" alt="{{ post.alt }}">
+          </div>
+          <div class="col-md-6">
+            <div class="modal-body">
+              <h2>{{ post.title }}</h2>
+              <hr class="star-primary">
+              {% if post.description %}
+              <p>{{ post.description }}</p>
+              {% endif %}
+              <!-- Insert the post content below the description -->
+              {{ post.content | markdownify }}
+              <ul class="list-inline item-details">
+                {% if post.client %}
+                <li>Client: <strong>{{ post.client }}</strong></li>
+                {% endif %}
+                {% if post.project-date %}
+                <li>Date: <strong>{{ post.project-date }}</strong></li>
+                {% endif %}
+                {% if post.category %}
+                <li>Service: <strong>{{ post.category }}</strong></li>
+                {% endif %}
+              </ul>
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
           </div>
         </div>
       </div>
