--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -180,11 +180,27 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top .navbar-brand img#navbar-logo {
-        display: inline-block; /* Show logo */
-        height: 40px; /* Adjust as necessary */
-        width: auto; /* maintain aspect ratio */
-        /* Align image here if necessary, e.g., margin, vertical-align */
+        display: block; /* Show logo */
+        max-height: 100%; /* Logo height should not exceed the navbar height */
+        width: auto; /* Maintain aspect ratio */
+        margin: auto; /* Center the logo horizontally */
+        vertical-align: middle; /* Center the logo vertically */
     }
+
+    .navbar-fixed-top {
+        padding-top: 10px; /* Adjust padding to fit the logo */
+        padding-bottom: 10px; /* Adjust padding to fit the logo */
+        -webkit-transition: padding .3s;
+        -moz-transition: padding .3s;
+        transition: padding .3s;
+    }
+
+    .navbar-fixed-top .navbar-toggle {
+        margin-top: 8px; /* Adjust as necessary for alignment */
+        margin-bottom: 8px; /* Adjust as necessary for alignment */
+    }
+}
+
 
 section {
     padding: 100px 0;
