--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -1,9 +1,9 @@
 <!-- Portfolio Grid Section -->
-<section id="menu">
+<section id="featured-menu">
   <div class="container portfolio-flex-grid">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2 style="color: #355c47">Holiday Menu</h2>
+        <h2 style="color: #355c47">Featured Holiday Menu</h2>
         <hr class="star-primary">
       </div>
     </div>
