Stashing this website for now. Going to switch to a different theme

--- a/_includes/contact_disqus.html
+++ b/_includes/contact_disqus.html
@@ -14,3 +14,6 @@
     </div>
   </div>
 </section>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
