--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -46,3 +46,6 @@
     <i class="fa fa-chevron-up"></i>
   </a>
 </div>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
