--- a/_includes/js.html
+++ b/_includes/js.html
@@ -24,3 +24,6 @@
 <!-- Disqus Stuff -->
 {% include js_disqus.html %}
 {% endif %}
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
