--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
           <a href="#page-top"></a>
         </li>
         <li class="page-scroll">
-          <a href="#menu">Menu</a>
+          <a href="/menu/">Menu</a>
         </li>
         <li class="page-scroll">
           <a href="#about">About</a>
@@ -33,3 +33,6 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
