--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,3 +22,6 @@
     </div>
   </div>
 </section>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
