--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -56,3 +56,6 @@
     </div>
   </div>
 </section>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
