--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,10 @@
   <meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
 
   <!-- Custom Fonts -->
-  <link rel="stylesheet" href="{{ " css/font-awesome/css/all.min.css" }}">
+  <link rel="stylesheet" href="{{ 'style.css' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ 'css/font-awesome/css/all.min.css' | prepend: site.baseurl }}">
+  
+
   <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
@@ -32,4 +35,6 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-</head>
+  </head>
+
+
