--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,3 +13,6 @@
     </div>
   </div>
 </header>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
