--- a/_includes/js_disqus.html
+++ b/_includes/js_disqus.html
@@ -20,3 +20,6 @@
 <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by
     Disqus.</a></noscript>
 <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
