--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -86,3 +86,6 @@
   </div>
 </div>
 {% endfor %}
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
