--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -13,7 +13,7 @@
         <a href="#portfolioModal-{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
           <div class="caption">
             <div class="caption-content">
-              <i class="fa fa-search-plus fa-3x"></i>
+              <!-- <i class="fa fa-search-plus fa-3x"></i> -->
             </div>
           </div>
           <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
@@ -23,3 +23,6 @@
     </div>
   </div>
 </section>
+
+<link rel="stylesheet" href="/css/font-awesome/css/all.min.css">
+<link rel="stylesheet" href="/style.css">
