--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1091,10 +1091,45 @@ pre {
   }
 }
 
-/* Custom CSS to control the image size on smaller screens */
-@media (max-width: 576px) {  /* This is for Bootstrap 4 and 5, adjust if using Bootstrap 3 */
-  .menu-item-image {
-    max-width: 250px;  /* Or whatever maximum size you prefer */
-    margin: 0 auto;  /* This will center the image in the card */
+/* Card styling */
+.menu-card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* Remove fixed width to allow responsiveness */
+  /* Add margin to ensure spacing between cards */
+  margin: 0.5rem; /* Adjust this value to increase spacing */
+}
+
+/* Image styling */
+.menu-item-image {
+  /* Responsive width with a max-width to control the size */
+  width: 100%; /* Responsive: takes up 100% of the .menu-card width */
+  max-width: 500px; /* Control the maximum size of the image */
+  height: auto; /* Maintain aspect ratio */
+  object-fit: cover;
+  /* Center the image if it's not filling the entire card */
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.menu-item-image:hover {
+  opacity: 0.8; /* Slightly see-through */
+  transition: opacity 0.3s ease-in-out;
+}
+
+/* Custom padding for the container */
+@media (min-width: 1199px) {
+  .custom-padding {
+    padding-left: 105px; /* This adds padding inside the container */
+    padding-right: 105px;
   }
+}
+
+/* Style for images within the modal */
+.modal-body .img-fluid {
+  max-width: 100%;  /* Ensures the image is responsive and doesn't exceed its container */
+  height: auto;     /* Maintains the aspect ratio */
+  max-height: 500px; /* Adjust this value to fit your design */
 }
