Social links in header. About Me placeholder

--- a/_includes/social-networks-links.html
+++ b/_includes/social-networks-links.html
@@ -163,7 +163,7 @@
   <li class="list-inline-item">
     <a href="https://www.instagram.com/{{ network[1] }}" title="Instagram">
       <span class="fa-stack fa-lg" aria-hidden="true">
-        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-circle fa-stack-2x" style="color: black;"></i>
         <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
       </span>
       <span class="sr-only">Instagram</span>
