--- a/_layouts/menu.html
+++ b/_layouts/menu.html
@@ -4,26 +4,38 @@ layout: default
 
 <div class="menu-page">
   <header class="menu-header">
-    <!--<img src="{{ page.header-img }}" alt="Header Image for {{ page.title }}" class="menu-header-img">-->
+    {% if page.header-img %}
+      <!--<img src="{{ page.header-img }}" alt="Header Image for {{ page.title }}" class="menu-header-img">-->
+    {% endif %}
     <h1>{{ page.title }}</h1>
   </header>
 
-  <div class="menu-items">
-    {% for item in page.menu_items %}
-    {% if item.link %}
-      <a href="{{ item.link }}" class="menu-item-link">
-    {% endif %}
-    <div class="menu-item-card">
-      <img src="{{ item.image }}" alt="{{ item.name }}" class="menu-item-img">
-      <div class="menu-item-details">
-        <h2>{{ item.name }}</h2>
-        <p>{{ item.description }}</p>
-        <p class="menu-item-price">{{ item.price }}</p>
-      </div>
+  {% if page.menu_items %}
+    <div class="menu-items">
+      {% for item in page.menu_items %}
+        {% if item.link %}
+          <a href="{{ item.link }}" class="menu-item-link">
+        {% endif %}
+        <div class="menu-item-card">
+          <img src="{{ item.image }}" alt="{{ item.name }}" class="menu-item-img">
+          <div class="menu-item-details">
+            <h2>{{ item.name }}</h2>
+            <p>{{ item.description }}</p>
+            <p class="menu-item-price">{{ item.price }}</p>
+          </div>
+        </div>
+        {% if item.link %}
+          </a>
+        {% endif %}
+      {% endfor %}
     </div>
-    {% if item.link %}
-      </a>
-    {% endif %}
-    {% endfor %}
+  {% else %}
+    <div class="menu-image">
+      <img src="{{ page.header-img }}" alt="{{ page.title }}" class="full-menu-img">
+    </div>
+  {% endif %}
+  
+  <div class="additional-content">
+    {{ content }}
   </div>
 </div>
